--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "boilerplate-card",
-  "version": "1.1.7",
-  "description": "Lovelace boilerplate-card",
+  "name": "mini-thermostat-card",
+  "version": "0.0.2",
+  "description": "Mini Thermostat card",
   "keywords": [
     "home-assistant",
     "homeassistant",
     "hass",
     "automation",
     "lovelace",
-    "custom-cards"
+    "custom-cards",
+    "thermostat"
   ],
-  "module": "boilerplate-card.js",
-  "repository": "git@github.com:custom_cards/boilerplate-card.git",
-  "author": "Ian Richardson <iantrich@gmail.com>",
+  "module": "mini-thermostat.js",
+  "repository": "git@github.com:Devqon/lovelace-mini-thermostat.git",
+  "author": "Sander Geerts <s.geerts@live.nl>",
   "license": "MIT",
   "dependencies": {
     "custom-card-helpers": "^1.3.9",
